--- a/site/index.njk
+++ b/site/index.njk
@@ -9,7 +9,7 @@ title: Articles from Medium
   <li>
     <p class="meta">Published on {{ item.pubDate | date }} by {{ item['dc:creator'] }}</p>
     <h3><a href="/posts/{{ item.path }}">{{ item.title }}</a></h3>
-    <img src="{{ item.enclosure(url) }}">
+    <img src="{{ item['enclosure.url'] }}">
   </li>
  {% endfor %}
 </ul>
